src/test/ui/parser/removed-syntax-field-semicolon.stderr
error: expected `,`, or `}`, found `;`
  --> $DIR/removed-syntax-field-semicolon.rs:4:12
   |
LL |     bar: ();
   |            ^

error: aborting due to previous error

