src/test/ui/parser/removed-syntax-field-semicolon.rs
// compile-flags: -Z parse-only

struct s {
    bar: ();
    //~^ ERROR expected `,`, or `}`, found `;`
}
